# mongodb-project-workshop

./: .gitignore  .python-version  LICENSE  README.md  data_generators.py  database_connection.py  main.py  models.py  pyproject.toml
scripts/: join_readmes.py
src/: __main__.py  data_generators.py  database_connection.py  main.py  models.py
tests/: conftest.py  test_collection.py
tutorial/basic_readme/: README.md
tutorial/connection_to_db/: README.md
tutorial/crud_queries/: README.md
tutorial/data_generators/: README.md
tutorial/data_structure/: 2-exercise.ipynb  README.md  data structure.ipynb  for_live_coding.ipynb
tutorial/documents_database/: README.md
tutorial/introduction/: README.md
tutorial/mongodb_atlas/: README.md
tutorial/project_setup/: README.md
tutorial/python_mongodb_tools/: README.md
tutorial/resources/: README.md
tutorial/simple_queries_atlas/: README.md
tutorial/tests/: README.md
tutorial/why_mongodb/: README.md
